[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bendex-tau"
version = "0.2.0"
description = "Real-time LLM response stability monitor grounded in Fisher-Rao information geometry and the Landauer limit."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Hannah Nine", email = "9hannahnine@gmail.com"}]
keywords = ["llm", "security", "prompt injection", "ai safety", "monitoring", "information geometry", "fisher-rao"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
]
dependencies = [
  "numpy>=1.21",
  "sentence-transformers>=2.0",
  "openai>=1.0",
]

[project.urls]
Homepage = "https://bendexgeometry.com"
Repository = "https://github.com/9hannahnine-jpg/bendex-tau"
Papers = "https://figshare.com/authors/Hannah_Nine/22495979"

[tool.setuptools.packages.find]
include = ["bendex_tau*"]
